Correct the front-end field-names with the new YearOfBirth concept
Also in the specs

--- a/Source/UserManagement/Web.Angular/src/app/addUser/userForm.component.html
+++ b/Source/UserManagement/Web.Angular/src/app/addUser/userForm.component.html
@@ -9,8 +9,8 @@
         
     </div>
     <div class="form-group">
-        <label>Age</label>
-        <input  class="form-control" id="age"  type="number" formControlName='age' placeholder="Age" ngDefaultControl>
+        <label for="year_of_birth">Year of Birth</label>
+        <input  class="form-control" id="year_of_birth"  type="number" formControlName='yearOfBirth' placeholder="Year of birth" ngDefaultControl>
     </div>
     <div class="form-group">
         <label for="sex">Sex</label>
